--- a/app/views/userinfo.haml
+++ b/app/views/userinfo.haml
@@ -17,7 +17,7 @@
 
   %div#all_content
     %h3.main_title 
-      Lunch Huddle
+      %a.home_link{:href => "/land?huddle=#{@huddle}"} Lunch Huddle
 
     %div.section
       %h3 User Information
