--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -33,8 +33,7 @@
     %div#all_content
 
       %h3.main_title 
-        Lunch Huddle
-        %span#util_link utility
+        %a.home_link{:href => "/land?huddle=#{@huddle}"} Lunch Huddle
   
       %div#log
         %div#log_toggle #{@log_toggle} 
