--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -52,6 +52,8 @@ input {
 input:focus {
   border: 1px solid #FFA85C;
   box-shadow: 2px 2px 2px #DADADA;
+  outline: none;
+
 }
 
 /* hackety hack */
@@ -294,7 +296,7 @@ h3 span.foo {
   -moz-border-radius: 7px;
   border-radius: 7px;
   background-color: #FF9F41;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#9F9F9F), to(#565656)); 
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#FFC893), to(#FF9F41)); 
   background-image: -webkit-linear-gradient(84deg, #FF9F41, #FFC893); 
   background-image: -moz-linear-gradient(84deg, #FF9F41, #FFC893); 
   background-image: -ms-linear-gradient(top, #FF9F41, #FFC893); 
