--- a/app/views/userinfo.haml
+++ b/app/views/userinfo.haml
@@ -16,7 +16,7 @@
   %body
 
   %div#all_content
-    %h3.main_title 
+    %h3.main_title.header
       %a.home_link{:href => "/land?huddle=#{@huddle}"} Lunch Huddle
 
     %div.section
@@ -24,20 +24,23 @@
         %h3 User Information
         %p Fill in all the fields before joining the huddle
         %form(action="/")
-          %p name: 
+          %p
+            name: 
             %input#txtName{:type => "text"}
           
-          %p email address: 
+          %p
+            email address: 
             %input#txtEmailAddr{:type => "text"}
             %a#why_email{:href => "#"} ?
           
-          %p huddle: 
+          %p
+            huddle: 
             %input#txtHuddleName{:name  => "huddle",
                                :type  => "text",
                                :value => "#{@huddle}"}
   
           %p
-          %input#joinHuddle{:type => "button",
+            %input#joinHuddle{:type => "button",
                             :value => "join huddle"}
         
         %div.clear
