up/down img for SavedLunchSpots works again

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -73,7 +73,7 @@
         %div#vetoed_lunch_spots_view.view.has_header
           %div#veto_list
 
-      %div.section
+      %div.section#saved_lunch_spots_view
         %h4.drag_handle.header
           %span#bar
             %img.cursor_hover.toggle_view{:src => "images/up.png"}
@@ -81,6 +81,6 @@
 
           %span#foo Saved Lunch Spots
 
-        %div#saved_lunch_spots_view.view.has_header
+        %div.view.has_header
           %div#saved_lunch_spots
 
