--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -15,6 +15,7 @@ h1, h2, h3, h4 {
 
 a {
   text-decoration: none;
+  color: #2B869F;
 }
 
 hr {
@@ -29,6 +30,7 @@ p {
 
 label {
   width: 120px;
+  line-height: 25px;
 }
 
 textarea,
@@ -146,7 +148,7 @@ h3 span.foo {
 }
 
 .invite {
-  color: #918E8E;
+/*  color: #918E8E; */
   font-style: italic;
 }
 
