--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -27,6 +27,7 @@
     %title Lunch Huddle
 
   %body
+    %img.cursor_hover.toggle_view{:src => "images/up.png"}
 
     %div(pub-key="pub-f692f5fb-58e7-4f72-b195-0b04d3960da8" sub-key="sub-a2494751-c5a0-11e0-b441-f562192438d2" ssl="off" origin="pubsub.pubnub.com" id="pubnub")
 
