enable/disable join button appropriately. hide id field

--- a/app/views/userinfo.haml
+++ b/app/views/userinfo.haml
@@ -28,8 +28,7 @@
             name: 
             %input#txtName{:type => "text"}
           
-          %p
-            probably unique id 
+          %span
             %input#txtUniqueId{:type => "text", :disabled => "disabled"}
           
           %p
