--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -75,8 +75,8 @@
       %div#saved_lunch_spots_view.section
         %h4.drag_handle.header
           %span#bar
-            %img.cursor_hover.toggle_view{:src => "images/up.png"}
-            %img.cursor_hover.toggle_view{:src => "images/down.png", :style => "display: none"}
+            %img.cursor_hover.toggle_view.open{:src => "images/toggle_open.png"}
+            %img.cursor_hover.toggle_view{:src => "images/toggle_collapse.png", :style => "display: none"}
 
           %span#foo Saved Lunch Spots
 
