--- a/app/views/userinfo.haml
+++ b/app/views/userinfo.haml
@@ -25,18 +25,24 @@
         %p We need to collect some information before you join the huddle
         %form(action="/")
           %p
-            name: 
-            %input#txtName{:type => "text"}
-          
-          %span
-            %input#txtUniqueId{:type => "text", :disabled => "disabled"}
-          
-          %p
-            huddle: 
+            Huddle 
             %input#txtHuddleName{:name  => "huddle",
                                :type  => "text",
                                :value => "#{@huddle}"}
-  
+
+          %p.user_info_explanation
+            The huddle name. All your lunch buds need to use this same name.
+
+          %p.form_control_section
+            Your Name 
+            %input#txtName{:type => "text"}
+          
+          %p.user_info_explanation
+            The name you'll use in the huddle.
+
+          %span
+            %input#txtUniqueId{:type => "text", :disabled => "disabled"}
+          
           %p
             %input#joinHuddle{:type => "button",
                             :value => "join huddle"}
