--- a/app/views/userinfo.haml
+++ b/app/views/userinfo.haml
@@ -22,16 +22,16 @@
     %div.section
       %div#user_info_view.view.has_header
         %h3 User Information
-        %p We need to collect some information before you join the huddle
+        %p Enter the information below to join a huddle.
         %form(action="/")
           %p
-            %label Huddle 
+            %label Huddle Name
             %input#txtHuddleName{:name  => "huddle",
                                :type  => "text",
                                :value => "#{@huddle}"}
 
           %p.user_info_explanation
-            The huddle name. All your lunch buds need to use this same name.
+            All your lunch buds need to use this name.
 
           %p.form_control_section
             %label Your Name 
