--- a/app/views/huddle.haml
+++ b/app/views/huddle.haml
@@ -6,9 +6,11 @@
     %script{:type => "text/javascript", :src =>"javascripts/lib/underscore.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/lib/backbone-min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/lib/util.jquery.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/jjquery.cookie-modified.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/Modernizr.dev.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/mustache.js"}
     %script{:type => "text/javascript", :src =>"javascripts/UserInfo.js"}
     %script{:type => "text/javascript", :src =>"javascripts/DataStore.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/lib/jjquery.cookie-modified.js"}
     %script{:type => "text/javascript", :src =>"javascripts/Logger.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/SendInvitesView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/UserInfoView.js"}
@@ -27,10 +29,10 @@
       %div#send_invites_view.view.has_header
         %h4 Huddle Info
     
-        %p Invite Others to Huddle #{@huddle}
+        %p Invite Others to <b>#{@huddle}</b> Huddle
   
         %form#frmSendInvite{:action => "/huddle/invite", :method => "post"}
-          %input#txtHuddle{:type => "text", :name => "txtHuddle", :value => @huddle}
+          %input#txtHuddle{:type => "hidden", :name => "txtHuddle", :value => @huddle}
           %p
             %br enter a valid email address list
             To: 
@@ -38,6 +40,8 @@
             %textarea#txtEmailAddr{:name => "txtEmailAddr", :rows => 4}
             %br
             %br
+            %div#invitee_list
+
             %input#btnInvite{:type => "button", :value => "Send Invitation"}
         
         %div.clear
