remove link to .../land page

--- a/app/views/userinfo.haml
+++ b/app/views/userinfo.haml
@@ -17,7 +17,7 @@
 
   %div#all_content
     %h3.main_title.header
-      %a.home_link{:href => "/land?huddle=#{@huddle}"} Lunch Huddle
+      %a.home_link{:href => "/?huddle=#{@huddle}"} Lunch Huddle
 
     %div.section
       %div#user_info_view.view.has_header
