--- a/app/views/huddle.haml
+++ b/app/views/huddle.haml
@@ -24,7 +24,7 @@
     %div.section#huddle_invite
     
       %h3.main_title.header
-        %a.home_link{:href => "/land?huddle=#{@huddle}"} Lunch Huddle
+        %a.home_link{:href => "/?huddle=#{@huddle}"} Lunch Huddle
   
       %div#send_invites_view.view.has_header
         %h4 Huddle Info
