--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -37,7 +37,7 @@
   
       %div.section
         %h3.main_title.header 
-          %a.home_link{:href => "/land?huddle=#{@huddle}"} Lunch Huddle
+          %a.home_link{:href => "/?huddle=#{@huddle}"} Lunch Huddle
 
         %div#vote_view.view.has_header
           %form(action="#")
