huddle.js needed a reference to UserInfoLib.js

--- a/app/views/huddle.haml
+++ b/app/views/huddle.haml
@@ -10,6 +10,7 @@
     %script{:type => "text/javascript", :src =>"javascripts/lib/Modernizr.dev.js"}
     %script{:type => "text/javascript", :src =>"javascripts/lib/mustache.js"}
     %script{:type => "text/javascript", :src =>"javascripts/UserInfo.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/UserInfoLib.js"}
     %script{:type => "text/javascript", :src =>"javascripts/DataStore.js"}
     %script{:type => "text/javascript", :src =>"javascripts/Logger.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/SendInvitesView.js"}
