added placeholder attribute for huddle invitee textarea control

--- a/app/views/huddle.haml
+++ b/app/views/huddle.haml
@@ -41,7 +41,7 @@
 
           %p 
             along with
-            %textarea#txtEmailAddr{:name => "txtEmailAddr", :rows => 4}
+            %textarea#txtEmailAddr{:name => "txtEmailAddr", :rows => 4, :placeholder => "person@yahoo.com, another_invitee@gmail.com"}
 
             %input#btnInvite{:type => "button", :value => "Send Invitation"}
         
