--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -5,7 +5,18 @@ body {
 
 #all_content {
   /* border: 1px solid black; */
-  width: 320px;
+  width: 380px;
+  margin: 0 auto;
+}
+
+#all_content.cols_2 {
+  width: 650px;
+}
+
+.column {
+  float: left;
+  width: 300px;
+  padding: 0 10px;
 }
 
 h1, h2, h3, h4 {
@@ -24,7 +35,7 @@ hr {
 }
 
 p {
-  font-size:14px;
+  font-size: 14px;
   color: #0E5667;
 }
 
@@ -85,6 +96,7 @@ input:focus {
 input[type=button] {
   cursor: pointer;
   background-color: #2B889E;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#A2BFC5), to(#2B889E)); 
   background-image: -webkit-linear-gradient(90deg, #2B889E, #A2BFC5);
   background-image: -moz-linear-gradient(90deg, #2B889E, #A2BFC5);
   color: #FFF;
@@ -103,7 +115,6 @@ textarea {
 
 .header {
   color: white;
-  width: 300px;
   -moz-border-radius: 7px 7px 0 0;
   border-radius: 7px 7px 0 0;
   background-color: #6C6C6C;
@@ -326,7 +337,6 @@ h3 span.foo {
 }
 
 .section {
-  width: 300px;
   margin-bottom: 10px;
 }
 
@@ -399,6 +409,51 @@ h3 span.foo {
 
 .clear {
   clear: both;
+}
+
+/* mobile styles */
+@media screen and (max-width: 480px) {
+
+  /* disable font resize on iphone */
+  html {
+	  -webkit-text-size-adjust: none;
+  }
+
+
+  /* disable floats */
+  .column {
+	float: none;
+	padding: 0;
+  }
+  
+  textarea,
+  input {
+	float: none;
+	display: block;
+  }
+  
+  .header #bar {
+	float: none;
+  }
+  
+  #scratch_container #left {
+	float: none;
+  }
+  #scratch_container #right {
+	float: none;
+  }
+  
+  /* reset width */
+  input,
+  .column,
+  #all-content,
+  #all_content.cols_2 {
+	width: 100%;
+  }
+
+  body {
+	margin: 0;
+  }
 }
 
 #invitee_list input {
