--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -25,6 +25,7 @@
     %script{:type => "text/javascript", :src =>"javascripts/view/VoteView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/Logger.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index.js"}
+    %meta{:name=>"viewport", :content=>"width=device-width; initial-scale=1.0"}
     %title Lunch Huddle
 
   %body
