--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -75,7 +75,7 @@
         %div#message_roll.section
           %h4.header
             %span Message Roll
-            %div#messages
+          %div#messages.view
               
 
         %div#saved_lunch_spots_view.section
