scroll messageroll view to bottom

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -75,7 +75,7 @@
         %div#message_roll.section
           %h4.header
             %span Message Roll
-          %div#messages.view
+          %div#messages.view(style="overflow-y:auto; height: 125px;")
               
 
         %div#saved_lunch_spots_view.section
